--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Contenedor principal para el layout móvil -->
     <div class="max-w-md mx-auto min-h-screen flex flex-col relative bg-background">
         <!-- Header (Recuperado y correcto) -->
-        <header class="p-4 sticky top-0 z-30 bg-background">
+        <header class="p-4 sticky top-0 z-30 bg-white shadow-sm">
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
                     <i class="fa-regular fa-cat text-2xl text-accent-purple mr-2"></i>
