--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Vista de Login (Correcta y actualizada) -->
         <div id="login-view" class="flex-1 flex flex-col items-center justify-center text-center p-8">
-            <img src="https://assets-global.website-files.com/652a233b86064f275cdb271d/653ec865d1b7ef3834316d9b_Learning-illustration-color.svg" alt="Ilustración de estudio" class="w-64 h-64 mb-4">
+            <img src="https://cdn.prod.website-files.com/62bfeacaf3ac9f2859f1ae9e/63e01fadc6567a497c517069_031-cat-skateboard.png" alt="Ilustración de estudio" class="w-64 h-64 mb-4">
             <h2 class="text-3xl font-extrabold text-primary-dark mb-3">La única app que necesitas</h2>
             <p class="text-text-muted mb-8 max-w-xs">Organiza tu vida y desbloquea lindos gatitos en el proceso.</p>
             <button id="login-button" class="w-full max-w-xs bg-primary-dark text-white font-bold py-4 px-6 rounded-2xl hover:opacity-90 transition-opacity flex items-center justify-center shadow-lg">
