--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Usamos la versión 6.5.2 de FontAwesome que tiene los iconos correctos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json"> 
 </head>
 <body class="font-poppins">
     <!-- Contenedor principal para el layout móvil -->
@@ -63,5 +64,21 @@
 
     <!-- Módulo JS principal -->
     <script type="module" src="script.js"></script>
+    <!-- Para que sea PWA -->
+<script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(registration => {
+            console.log('ServiceWorker registrado con éxito: ', registration.scope);
+          })
+          .catch(err => {
+            console.log('Fallo en el registro del ServiceWorker: ', err);
+          });
+      });
+    }
+  </script>
+  </body>
+  </html>
 </body>
 </html>
